added some changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </ul>
             </div>
             <div class="lg:navbar-end gap-3">
-              <i class="fa-solid fa-magnifying-glass hidden"></i>
+              <i class="fa-solid fa-magnifying-glass lg:block hidden"></i>
               <a class="btn text-white bg-[#FF4240] text-xl">Get Ticket</a>
             </div>
           </div>
@@ -101,7 +101,8 @@
          <div>
           <h1 class="text-white font-semibold
           text-xl">Meet all the heroes from the field</h1>
-          <p class="text-sm font-medium text-[#A1A1A3]" >Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="text-sm font-medium text-[#A1A1A3]" >Our hockey club's triumphant players showcase unparalleled skill, teamwork, and unyielding determination, securing victories with finesse, grit, and sportsmanship. </p>
+
 
          </div>
 
@@ -110,31 +111,32 @@
       </section>
         <!-- percentage section -->
       <section>
-        <div class="text-center border-y-2 border-dotted border-[#A1A1A3] lg:w-[1170px] mx-auto py-12">
+        <div class="text-center border-y-2 border-dotted border-[#A1A1A3] w-[335px] lg:w-[1170px] mx-auto py-12">
             <h1 class="lg:text-4xl text-2xl font-bold text-black pb-5">Professional Hockeys Club</h1>
-            <p class="lg:text-sm text-[14px] font-medium text-[#A1A1A3]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            <p class="lg:text-sm text-[14px] font-medium text-[#A1A1A3]">Our professional hockey club excels with elite talent, strategic brilliance, and unwavering teamwork, igniting fans' passion with thrilling victories and exceptional performances.</p>
+
 
         </div>
-          <div class="flex text-center border-b-2 border-dotted border-[#A1A1A3] lg:w-[1170px] mx-auto py-12 flex-col lg:flex-row gap-9 lg:gap-0">
+          <div class="flex text-center border-b-2 border-dotted border-[#A1A1A3] w-[335px]  lg:w-[1170px] mx-auto py-12 flex-col lg:flex-row gap-9 lg:gap-0">
             <div>
                 <div class="radial-progress rotate-180 text-red-600 " style="--value:87;" role="progressbar"><span class="rotate-180 text-black font-bold">87%</span></div>
                 <h1 class="text-xl font-medium text-black pb-5">Prayer Facility</h1>
-                <p class="text-sm font-medium text-[#A1A1A3]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                <p class="text-sm font-medium text-[#A1A1A3]">Sacred space fostering unity and resilience.</p>
             </div>
             <div>
                 <div class="radial-progress rotate-180 text-[#49D293] " style="--value:95;" role="progressbar"><span class="rotate-180 text-black font-bold">95%</span></div>
-                <h1 class="text-xl font-medium text-black pb-5">Prayer Facility</h1>
-                <p class="text-sm font-medium text-[#A1A1A3]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                <h1 class="text-xl font-medium text-black pb-5">Experienced Coach</h1>
+                <p class="text-sm font-medium text-[#A1A1A3]">Masterful coach, guiding with wisdom and expertise.</p>
             </div>
             <div>
                 <div class="radial-progress rotate-180 text-[#FFBE5D] " style="--value:90;" role="progressbar"><span class="rotate-180 text-black font-bold ">90%</span></div>
-                <h1 class="text-xl font-medium text-black pb-5">Prayer Facility</h1>
-                <p class="text-sm font-medium text-[#A1A1A3]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                <h1 class="text-xl font-medium text-black pb-5">Senior Player</h1>
+                <p class="text-sm font-medium text-[#A1A1A3]">Veteran leaders, anchoring with experience and excellence.</p>
             </div>
             <div>
                 <div class="radial-progress rotate-180 text-[#4C8DF1] " style="--value:80;" role="progressbar"><span class="rotate-180 text-black font-bold ">80%</span></div>
-                <h1 class="text-xl font-medium text-black pb-5">Prayer Facility</h1>
-                <p class="text-sm font-medium text-[#A1A1A3]">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                <h1 class="text-xl font-medium text-black pb-5">Training Ground</h1>
+                <p class="text-sm font-medium text-[#A1A1A3]">Premier training ground fostering skill and camaraderie.</p>
             </div>
           </div>
         
@@ -142,9 +144,9 @@
       </section>
 
       <section>
-     <div class="text-center border-b-2 border-dotted border-gray-400 lg:w-[1170px] w-[344px]  mx-auto py-12">
+     <div class="text-center border-b-2 border-dotted border-gray-400 lg:w-[1170px] w-[335px]   mx-auto py-12">
       <h1 class="lg:text-4xl text-2xl font-bold text-black pb-5">Program Sections</h1>
-      <p class="lg:text-sm text-[14px] font-medium text-[#A1A1A3]" >Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      <p class="lg:text-sm text-[14px] font-medium text-[#A1A1A3]" >Our hockey club's program stories narrate triumphs, resilience, and camaraderie, illustrating the journey of athletes turning aspirations into achievements.</p>
 
      </div>
      <div class="lg:w-[1170px] w-[344px] flex lg:flex-row flex-col justify-between lg:mx-auto mx-2 mt-9 mb-6 gap-[20px]">
@@ -154,8 +156,8 @@
           <div class="hero-content text-left text-neutral-content">
             <div class="max-w-md">
               <h1 class="mb-5 text-[28px] font-bold text-white">Junior Program</h1>
-              <p class="mb-5 text-[16px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
-                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <p class="mb-5 text-[16px]">Our hockey club's junior program nurtures young talent, fostering passion, skill development, and sportsmanship, shaping future champions with dedication and guidance.</p>
+
                 <button class="btn bg-[#FF4240] text-white border-0 w-[180px] h-[33px]">Register Now!</button>
             </div>
           </div>
@@ -168,8 +170,8 @@
           <div class="hero-content text-left text-neutral-content">
             <div class="max-w-md">
               <h1 class="mb-5 text-[28px] font-bold text-white ">Teenager Program</h1>
-              <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
-                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <p class="mb-5">Our hockey club's teenager program molds aspiring players, emphasizing skill enhancement, teamwork, and character development, fostering the next generation of champions.</p>
+
               <button class="btn bg-[#FF4240] text-white border-0 w-[180px] h-[33px]">Register Now!</button>
             </div>
           </div>
@@ -183,8 +185,8 @@
         <div class="hero-content text-left text-neutral-content">
           <div class="max-w-md lg:relative right-[300px] top-[90px]">
             <h1 class="mb-5 text-[28px] font-bold text-white ">Professional Program</h1>
-            <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
-              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <p class="mb-5">The professional program at our hockey club is the pinnacle, refining elite skills, tactical brilliance, and dedication, shaping champions for success at the highest level.</p>
+
               <button class="btn bg-[#FF4240] text-white border-0 w-[180px] h-[33px]">Register Now!</button>
           </div>
         </div>
@@ -196,7 +198,7 @@
 
 
       <section>
-        <div class="text-center border-y-2 border-dotted border-[#A1A1A3]  lg:w-[1170px] mx-auto py-12 my-12">
+        <div class="text-center border-y-2 border-dotted border-[#A1A1A3] w-[335px]   lg:w-[1170px] mx-auto py-12 my-12">
           <h1 class="text-4xl font-semibold text-black pb-5">Our New Products</h1>
           <p class="text-sm font-medium text-[#A1A1A3]">Explore cutting-edge hockey gear! Our club introduces innovative products—sticks, jerseys, and more—crafted for peak performance. Elevate your game with us!</p>
 
@@ -331,9 +333,9 @@
 
 
       <section>
-        <div class="text-center border-y-2 border-dotted border-[#A1A1A3]  lg:w-[1170px] mx-auto py-12">
+        <div class="text-center border-y-2 border-dotted border-[#A1A1A3] w-[335px]  lg:w-[1170px] mx-auto py-12">
           <h1 class="text-4xl font-semibold text-black pb-5">Clients Question</h1>
-          <p class="text-sm font-medium text-[#A1A1A3]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="text-sm font-medium text-[#A1A1A3]">Clients' questions at our hockey club are addressed with precision, ensuring clarity, satisfaction, and a seamless experience for all inquiries.</p>
 
       </div>
       <div class="border-2 border-solid border-[#DEDEDE] rounded-xl lg:w-[1170px] w-[344px] lg:h-[534px]  mx-auto my-6 flex lg:flex-row flex-col justify-between items-center">
@@ -412,7 +414,7 @@
 
 
       <section>
-        <div class="text-center border-y-2 border-dotted border-[#A1A1A3]  lg:w-[1170px] mx-auto py-12">
+        <div class="text-center border-y-2 border-dotted border-[#A1A1A3] w-[335px]   lg:w-[1170px] mx-auto py-12">
           <h1 class="text-4xl font-semibold text-black pb-5">Get In Touch</h1>
           <p class="text-sm font-medium text-[#A1A1A3]">"Forge meaningful connections with us. Join our community, engage in discussions, and stay informed. Together, let's build lasting relationships." </p>
 
