added some solution

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
      <div class="program-card container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-4 py-12">
       <div class="p-card-1">
         <div class="card bg-base-100 shadow-xl image-full">
-          <figure><img class="w-full" src="images/2.png" alt="Shoes">
+          <figure><img class="w-full" src="Images/2.png" alt="Shoes">
           </figure>
           <div class="card-body justify-end">
             <h2 class="text-white text-xl lg:text-3xl font-extrabold card-title">Junior Program</h2>
@@ -170,7 +170,7 @@
       </div>
       <div class="p-card-2">
         <div class="card bg-base-100 shadow-xl image-full">
-          <figure><img class="w-full" src="images/3.png" alt="Shoes">
+          <figure><img class="w-full" src="Images/3.png" alt="Shoes">
           </figure>
           <div class="card-body justify-end">
             <h2 class="text-white text-xl lg:text-3xl font-extrabold card-title">Teenager Program</h2>
@@ -186,7 +186,7 @@
       </div>
       <div class="p-card-3 lg:col-span-2">
         <div class="card bg-base-100 shadow-xl image-full">
-          <figure><img class="bg-[#13131880] w-full" src="images/4.png" alt="Shoes">
+          <figure><img class="bg-[#13131880] w-full" src="Images/4.png" alt="Shoes">
           </figure>
           <div class="card-body justify-end">
             <h2 class="text-white text-xl lg:text-3xl font-extrabold card-title">Professional Program</h2>
